--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							</article>
                         
                         <article id="tower" class="panel">
-								<header>
+								<header class="sonnet">
 									<h1>Towering Sonnet</h1>
 									<p style="font-size=50%;">Augmented Reality is so cool
                                     <br>At kiwijam there is a team that rocks,
