--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>A rather poetic Kiwijam</title>
+		<title>A Rather Poetic Kiwijam</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -38,12 +38,12 @@
 						<!-- Me -->
 							<article id="cat" class="panel me">
 								<header>
-									<h1 style="text-align:left;">The Cat in the Coat</h1>
+									<h1 style="text-align:left;">The Cats in the Coat</h1>
 									<p style="text-align:left;">There once was a pussy that lost a bet
                                     <br>and ended up in quite a debt,
                                     <br>to make amends
                                     <br>she gathered some friends
-                                    <br>And off they set in a jacket.</p>
+                                    <br>and off they set in a jacket.</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<img src="images/cat.jpg" alt="" />
@@ -58,10 +58,10 @@
                                     <br>and the with the taste of the freshest remains.
                                     <br>Your rapid breathing and shivering body arouse me,
                                     <br>your tormented mind teetering of the edge of madness,
-                                    <br>so encouraging
+                                    <br>so encouraging.
                                     <br>Child, sweetest dearest Child,
                                     <br>I love the shrill pitch of your screams, music to my ears
-                                    <br>as I feel the air escape from your lungs for the last time.
+                                    <br>as I feel the air rushes from your lungs.
                                     <br>Oh Child,
                                     <br>Nothing would make me happier than to consume every inch of your happiness
                                     <br>I will destroy you child</p>
@@ -71,10 +71,10 @@
                         
                         <article id="walk" class="panel me">
 								<header>
-									<h1>A tribute to the silliest</h1>
-									<p>John Cleese walks strangely
-                                    <br>To hop, to skip and to flex
-                                    <br>He does it greatly!</p>
+									<h1>A tribute to the silliest of walks</h1>
+									<p>John Cleese walks strangely.
+                                    <br>To hop, to skip and to flex,
+                                    <br>he does it greatly!</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<img src="images/silly.jpg" alt="" />
@@ -84,18 +84,18 @@
                         <article id="tower" class="panel">
 								<header class="sonnet">
 									<h1>Towering Sonnet</h1>
-									<p style="font-size=50%;">Augmented Reality is so cool
+									<p style="font-size=50%;">Augmented Reality is so cool.
                                     <br>At kiwijam there is a team that rocks,
-                                    <br>They worked together to create a jewel,
-                                    <br>a game that is better than silly walks
+                                    <br>they worked together to create a jewel,
+                                    <br>a game that is better than silly walks.
                                     <br>No joke, they built a tower to defend
-                                    <br>From an enemy that just will not quit
-                                    <br>You will play this one till the bitter end
-                                    <br>Or give up if you don't have the spirit.
+                                    <br>from an enemy that just will not quit.
+                                    <br>You will play this one till the bitter end,
+                                    <br>or give up if you don't have the spirit.
                                     <br>Use the camera to your advantage,
-                                    <br>move it around to get the best angle
-                                    <br>kill attackers the best you can manage
-                                    <br>before you end in a nasty tangle
+                                    <br>move it around to get the best angle.
+                                    <br>Kill attackers the best you can manage,
+                                    <br>before you end in a nasty tangle.
                                     <br>A game in which your wildest dreams come true,
                                     <br>Go give it a play or at least a view!</p>
 								</header>
@@ -105,9 +105,9 @@
                             <header>
                                 <h1>Hide & Seek</h1>
                                 <p>There was a morbid alien onboard,
-                                <br>That did spawn amongst the hoard
-                                <br>trying his best to hide
-                                <br>with your eyes open wide
+                                <br>that did spawn amongst the hoard.
+                                <br>It tried its best to hide.
+                                <br>With your eyes open wide,
                                 <br>make sure the one you seek is not ignored.</p>
                             </header>
                             <a href="#work" class="jumplink pic">
@@ -118,11 +118,11 @@
                         <article id="amiga" class="panel me">
                             <header>
                                 <h1>It’s Not Plagiarism</h1>
-                                <p>There was a game for another console
-                                <br>But the Amiga became the goal.
+                                <p>There was a game for another console,
+                                <br>but the Amiga was the ultimate goal.
                                 <br>He went to program,
-                                <br>he did so at kiwijam
-                                <br>But oh boy that craft is hard to control.</p>
+                                <br>he did so at kiwijam,
+                                <br>But boy that craft is hard to control.</p>
                             </header>
                             <a href="#work" class="jumplink pic">
                                 <img src="images/plane.jpg" alt="" />
@@ -131,9 +131,9 @@
                         <article id="catduck" class="panel me">
                             <header>
                                 <h1>Cat Duck</h1>
-                                <p>A cat and a duck
-                                <br>Born natural enemies
-                                <br>One day would they meet</p>
+                                <p>A cat and a duck.
+                                <br>Born natural enemies.
+                                <br>One day would they meet.</p>
                             </header>
                             <a href="#work" class="jumplink pic">
                                 <img src="images/catduck.jpg" alt="" />
@@ -142,11 +142,11 @@
                         <article id="landers" class="panel me">
                             <header>
                                 <h1>Balloon Landing</h1>
-                                <p>There was an eager balloon lander
-                                <br>As it approached it dropped anchor
-                                <br>Then out of nowhere
-                                <br>Meteors did appear
-                                <br>And the pilots, oh did they scamper!</p>
+                                <p>There was an eager balloon lander,
+                                <br>as it approached it dropped anchor.
+                                <br>Then out of nowhere,
+                                <br>meteors did appear
+                                <br>and the pilots, oh did they scamper!</p>
                             </header>
                             <a href="#work" class="jumplink pic">
                                 <img src="images/balloon.jpeg" alt="" />
@@ -163,92 +163,12 @@
                                 <img src="images/carnivore.jpg" alt="" />
                             </a>
                         </article>
-						<!-- Work 
-							<article id="work" class="panel">
-								<header>
-									<h2>Work</h2>
-								</header>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
-								<section>
-									<div class="row">
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="4u 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="4u$ 12u$(mobile)">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
-									</div>
-								</section>
-							</article>
-
-						<!-- Contact 
-							<article id="contact" class="panel">
-								<header>
-									<h2>Contact Me</h2>
-								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="6u 12u$(mobile)">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="6u$ 12u$(mobile)">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="12u$">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="12u$">
-												<textarea name="message" placeholder="Message" rows="8"></textarea>
-											</div>
-											<div class="12u$">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
-							</article>
--->
 					</div>
 
 				<!-- Footer 
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Poems for the people.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Poems for the people.</li><li>Artwork Courtesy of : <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>-->
 
