--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                     <br>so encouraging.
                                     <br>Child, sweetest dearest Child,
                                     <br>I love the shrill pitch of your screams, music to my ears
-                                    <br>as I feel the air rushes from your lungs.
+                                    <br>as I feel the air rushing from your lungs.
                                     <br>Oh Child,
                                     <br>Nothing would make me happier than to consume every inch of your happiness
                                     <br>I will destroy you child</p>
