--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         
                         <article id="walk" class="panel me">
 								<header>
-									<h1>A tribute to the silliest of walks</h1>
+									<h1>The silliest of walks</h1>
 									<p>John Cleese walks strangely.
                                     <br>To hop, to skip and to flex,
                                     <br>he does it greatly!</p>
