--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<div id="main">
 						<article id="home" class="panel me">
 								<header>
-									<h1 style="text-align:left;">Kiwijam16</h1>
+									<h1 style="text-align:left;">A Rather Poetic Kiwijam (2016)</h1>
 									<p style="text-align:left;">This year instead of making a game, I wrote poems about
 									<br> everyone elses games. This is my anthology.</p>
 								</header>
